--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/css/main.css">
-    <link rel="stylesheet" href="/css/style.css">
+    <link rel="stylesheet" href="./css/main.css">
+    <link rel="stylesheet" href="./css/style.css">
     <title>Trabalho de Front-End</title>
 </head>
 <body>
@@ -13,7 +13,7 @@
             <div class="nav-bar">
                 <div class="nav">
                     <div class="logo">
-                        <img src="img/dom_helder.png" alt="Logo_Dom_Helder">
+                        <img src="./img/dom_helder.png" alt="Logo_Dom_Helder">
                     </div>
                 </div>
             </div>
@@ -21,7 +21,7 @@
         <main>
             <h1>CONVERSOR DE BASES NUMÉRICAS</h1>
             <div class="foto">
-                <img src="img/conversor.png" alt="Conversor de Base" srcset="">
+                <img src="./img/conversor.png" alt="Conversor de Base" srcset="">
             </div>
             <div class="section">
                 <h2>Decimal - Binário</h2>
@@ -68,6 +68,6 @@
             </div>
         </footer>
     </div>
-    <script src="/js/script.js"></script>
+    <script src="./js/script.js"></script>
 </body>
 </html>
